# hol_vids

./: .gitignore  README.md  TITLES.md  holvid.toml.example  pyproject.toml
.claude/: gh-user
.claude/skills/plan-vacation-video/: SKILL.md
holvid/: __init__.py  chapters.py  cli.py  config.py  geo.py  glitch.py  pace.py  probe.py  sanitize.py  timeline.py
