[project]
name = "hol-vids"
version = "0.1.0"
description = "Turn a folder of raw vacation clips into a titled, review-ready Final Cut Pro timeline — fully local."
readme = "README.md"
requires-python = ">=3.11"          # tomllib is stdlib from 3.11
dependencies = []                    # stdlib only; needs ffmpeg/ffprobe on PATH

# Optional, per-step extras (each analysis step is opt-in):
#   sanitize -> mlx-whisper          (transcription; Ollama call is stdlib)
#   geo      -> reverse_geocoder     (offline reverse geocoding; needs exiftool on PATH)
[project.optional-dependencies]
geo = ["reverse_geocoder"]
sanitize = ["mlx-whisper"]

[project.scripts]
holvid = "holvid.cli:main"

[tool.setuptools]
packages = ["holvid"]
